tests/NormalTests/paczka1/fuzzy1/53835648.err
Error in line 6: MF75wdrNJ Ar45 9r,0
Error in line 18: S899 A245 33,3
Error in line 24: LJWBb A622 97,0
Error in line 27: S899 S80 9,1
Error in line 16: ft4oJFomzh A245 46,7
Error in line 22: MF75wd2NJ S80 103,0
Error in line 38: QgJomHVlg A245 2,1
Error in line 28: LJWBb S80 27,7
